    loss). (Yussuf Khalil)

- Intl:
  . Fixed bug #65683 (Intl does not support DateTimeImmutable). (Ben Scholzen)
  . Fixed bug #74298 (IntlDateFormatter->format() doesn't return
    microseconds/fractions). (Andrew Nester)
  . Fixed bug #74433 (wrong reflection for Normalizer methods). (villfa)

- Opcache:
  . Fixed bug #74431 (foreach infinite loop). (Nikita)

- OpenSSL:
  . Fixed bug #74341 (openssl_x509_parse fails to parse ASN.1 UTCTime without
    seconds). (Moritz Fain)

- phar:
  . Fixed bug #74383 (phar method parameters reflection correction). 
    (mhagstrand)

- Standard:
  . Fixed bug #72071 (setcookie allows max-age to be negative). (Craig Duncan)
  . Fixed bug #74361 (Compaction in array_rand() violates COW). (Nikita)


13 Apr 2017, PHP 7.1.4

- Core:
  . Fixed bug #74149 (static embed SAPI linkage error). (krakjoe)
  . Fixed bug #73370 (falsely exits with "Out of Memory" when using
    USE_ZEND_ALLOC=0). (Nikita)
  . Fixed bug #73960 (Leak with instance method calling static method with
    referenced return). (Nikita)
  . Fixed bug #69676 (Resolution of self::FOO in class constants not correct).
    (Nikita)
  . Fixed bug #74265 (Build problems after 7.0.17 release: undefined reference
    to `isfinite'). (Nikita)
  . Fixed bug #74302 (yield fromLABEL is over-greedy). (Sara)

- Apache:
  . Reverted patch for bug #61471, fixes bug #74318. (Anatol)

- Date:
  . Fixed bug #72096 (Swatch time value incorrect for dates before 1970). (mcq8)

- DOM:
  . Fixed bug #74004 (LIBXML_NOWARNING flag ingnored on loadHTML*).
    (somedaysummer)

- iconv:
  . Fixed bug #74230 (iconv fails to fail on surrogates). (Anatol)

- OCI8:
  . Fixed uninitialized data causing random crash. (Dmitry)

- Opcache:
  . Fixed bug #74250 (OPcache compilation performance regression in PHP 5.6/7
    with huge classes). (Nikita)

- OpenSSL:
  . Fixed bug #72333 (fwrite() on non-blocking SSL sockets doesn't work).
    (Jakub Zelenka)

- PDO MySQL: