@@ -366,6 +366,12 @@ static zend_bool opline_supports_assign_contraction(
 			&& (opline->op2_type != IS_CV || opline->op2.var != cv_var);
 	}
 
+	if (opline->opcode == ZEND_CAST) {
+		/* CAST to array/object may initialize the result to an empty array/object before
+		 * reading the expression. */
+		return opline->extended_value != IS_ARRAY && opline->extended_value != IS_OBJECT;
+	}
+
 	return 1;
 }
 
